Minor visual fix to remove excess body padding for collapse groups.

--- a/openidm-ui/openidm-ui-admin/src/main/resources/css/config/connectorView.less
+++ b/openidm-ui/openidm-ui-admin/src/main/resources/css/config/connectorView.less
@@ -29,6 +29,10 @@
   border-bottom: 1px solid #eee;
 }
 
+.panel-body.panel-collapse-body {
+  padding-bottom:0px;
+}
+
 /*
   LDAP Filter
 */
